add page structure to index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,42 @@
-//Write HTML/CSS code here
-
-
+<!DOCTYPE html>
+<html lang="en">
+<!-- Write HTML/CSS code here -->
+<head>
+  <!-- Place title and CSS classes here -->
+  <title></title>
+</head>
 
 <body>
-  <header></header>
-  <main></main>
-  <footer></footer>
+  <header>
+    <!-- Place Company Logo here -->
+  </header>
+
+
+  <nav>
+    <!-- Place navigation links here -->
+  </nav>
+
+
+  <main>
+    <section>
+      <!-- Place material for first section here -->
+    </section>
+
+
+    <section>
+      <!-- Material for second section here -->
+    </section>
+  </main>
+
+
+  <footer>
+    <details>
+      <!-- Place Credits, contanct info,  -->
+      
+      <summary>
+        <!-- Place Company here -->
+      </summary>
+    </details>
+  </footer>
 </body>
+</html>
