--- a/index.html
+++ b/index.html
@@ -1,41 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <!-- Write HTML/CSS code here -->
 <head>
-  <!-- Place title and CSS classes here -->
+  <!-- Place title, stylesheet link, and CSS here -->
+  <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+  <meta charset="UTF-8">
   <title></title>
 </head>
 
 <body>
   <header>
-    <!-- Place Company Logo here -->
+    <img src="https://github.com/SoraEagle/phase-1-project/blob/main/Project%20Company%20Logo.jpg?raw=true" 
+    width="50px" height="50px">
+    <h1>Cocktail Maestros</h1>
   </header>
 
 
   <nav>
     <!-- Place navigation links here -->
+    <a href="#contact">Contact Us</a>
   </nav>
 
 
   <main>
     <section>
-      <!-- Place material for first section here -->
-    </section>
+      <!-- Material for first section here -->
+      <!--Search Form-->
+      <p>Search for Cocktails</p>
 
+      <span>
+        <input type="text">
+      </span>
+    </section>
+    
 
     <section>
-      <!-- Material for second section here -->
+      <!--Cocktails Table-->
+      <table id="cocktailsTable" border="1px" solid thick>
+        <!--Table Contents-->
+        <tr>
+          <th>Cocktail</th>
+          <th>Cocktail Image</th>
+          <th>Alcoholic?</th>
+          <th>Ingredients</th>
+        </tr>
+
+        <tbody></tbody>
+      </table>
     </section>
   </main>
 
 
   <footer>
+    <a id="contact"><h3>Contact</h3></a>
+    <p>Email: <a href="phillips.matthew829@gmail.com">phillips.matthew829@gmail.com</a></p>
     <details>
       <!-- Place Credits, contanct info,  -->
       
-      <summary>
-        <!-- Place Company here -->
-      </summary>
+      <summary><!-- Place Company here -->
+        &copy; 2021 Cocktail Maestros </summary>
+        <p>All Rights Reserved.</p>
     </details>
   </footer>
 </body>
