--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
   <title></title>
 </head>
 
+
 <body>
   <header>
-    <img src="https://github.com/SoraEagle/phase-1-project/blob/main/Project%20Company%20Logo.jpg?raw=true" 
-    width="50px" height="50px">
     <h1>Cocktail Maestros</h1>
   </header>
 
@@ -30,7 +29,9 @@
       <p>Search for Cocktails</p>
 
       <span>
-        <input type="text">
+        <input type="text" id="drink" name="drink" placeholder="margarita">
+        <!--onclick=""-->
+        <button type="button">Search</button>
       </span>
     </section>
     
@@ -45,6 +46,7 @@
           <th>Alcoholic?</th>
           <th>Ingredients</th>
         </tr>
+        <!--Add JS code to insert new <tr> and <td>'s per cocktail returned'-->
 
         <tbody></tbody>
       </table>
