fix broken link to style.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- Write HTML/CSS code here -->
 <head>
   <!-- Place title, stylesheet link, and CSS here -->
-  <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
   <meta charset="UTF-8">
   <title></title>
 </head>
