--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
 
   <main>
     <section>
-      <!-- Material for first section here -->
       <!--Search Form-->
       <p>Search for Cocktails</p>
 
       <span>
         <input type="text" id="drink" name="drink" placeholder="margarita">
         <!--onclick=""-->
-        <button type="button">Search</button>
+        <button type="button" id="search">Search</button>
       </span>
     </section>
     
