add psuedocode to index.js

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </tr>
         <!--Add JS code to insert new <tr> and <td>'s per cocktail returned'-->
 
-        <tbody></tbody>
+        <tbody id="tableBody"></tbody>
       </table>
     </section>
   </main>
