fix index.js not working, add tableSubmit

--- a/index.html
+++ b/index.html
@@ -62,5 +62,6 @@
         <p>All Rights Reserved.</p>
     </details>
   </footer>
+  <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
