fix table style, fix spacing

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
 
     <section><!--Cocktails Table-->
-      <table id="cocktailsTable" border="1px">
+      <table id="cocktailsTable">
         <!--Table Contents-->
         <tr><!--Table Header-->
           <th>Cocktail</th>
