make the text field required for search results

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section><!--Search Form-->
       <form id="drink-form">
       <p>Search for Cocktails</p>
-      Drink Name: <input type="text" id="drink" name="drink" placeholder="margarita">
+      Drink Name: <input type="text" id="drink" name="drink" placeholder="margarita" required>
       <!--onclick=""-->
       <input type="submit" id="search" value="Search"/>
       </form>
