remove unneeded lines

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
           <th>Ingredients</th>
         </tr>
         <!--Next Table Row...-->
-        <!--Add JS code to insert new <tr> and <td>'s per cocktail returned'-->
 
         <tbody id="tableBody"></tbody>
       </table>
@@ -55,8 +54,7 @@
     <a id="contact"><h3>Contact</h3></a>
     <p>Email: <a href="phillips.matthew829@gmail.com">phillips.matthew829@gmail.com</a></p>
     
-    <details>
-      <!-- Place Credits, contanct info,  -->     
+    <details><!-- Place Credits, contanct info,  -->     
       <summary><!-- Place Company and &copy here -->
         &copy; 2021 Cocktail Maestros</summary>
         <p>All Rights Reserved.</p>
