--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <footer>
     <a id="contact"><h3>Contact</h3></a>
-    <p>Email: <a href="phillips.matthew829@gmail.com">phillips.matthew829@gmail.com</a></p>
+    <p>Email: <a href="#email">phillips.matthew829@gmail.com</a></p>
     
     <details><!-- Place Credits, contanct info,  -->     
       <summary><!-- Place Company and &copy here -->
