--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
   <nav>
     <!-- Place navigation links here -->
-    <a href="#contact">Contact Us</a>
+    <a>Contact Us</a>
+    <a>About</a>
   </nav>
 
 
